--- a/skins/elastic/elastic.css
+++ b/skins/elastic/elastic.css
@@ -3773,3 +3773,7 @@ html.touch #tasklist span.tags {
     overflow: hidden;
     text-overflow: ellipsis;
 }
+/*samoilov 29.10.2020 hide datepicker in left bottom corner*/
+#datepicker {
+	display:none;
+}
