Add support of DAV operations and 2-way sync from RC and NC
!Warning! Except for calendar deletion from NC because I've no clue now how to do this without coding on the NC side

--- a/skins/elastic/templates/calendar.html
+++ b/skins/elastic/templates/calendar.html
@@ -1,6 +1,9 @@
 <roundcube:include file="includes/layout.html" />
 <roundcube:include file="includes/menu.html" />
 
+<!--add override.css -->
+<link rel="stylesheet" type="text/css" href="./plugins/calendar/skins/elastic/override.css">
+
 <h1 class="voice"><roundcube:label name="calendar.calendar" /></h1>
 
 <!-- calendars list -->
